# rust-chat-backend

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221229_000001_create_table.rs
src/: main.rs
src/entities/: group.rs  group_user.rs  message.rs  mod.rs  prelude.rs  user.rs
src/groups/: dto.rs  mod.rs  mutation.rs  query.rs  types.rs
src/messages/: dto.rs  mod.rs  mutation.rs  types.rs
src/users/: dto.rs  mod.rs  mutation.rs  types.rs
